[gd_scene load_steps=7 format=3 uid="uid://dft4y2ambv4d3"]

[ext_resource type="Script" path="res://scripts/pagina_settings.gd" id="1_14rop"]
[ext_resource type="Theme" uid="uid://cmcb4mmclu5ex" path="res://Fuentes/tema_libro.tres" id="1_eteud"]
[ext_resource type="Texture2D" uid="uid://ds8j1l4sv3678" path="res://texturas/menus/Borde_Ilustraciones_Libro.png" id="1_ogg57"]
[ext_resource type="Texture2D" uid="uid://cgrucv55xpoo3" path="res://texturas/menus/Menu_Inicio_Ilustracion.png" id="2_rk8on"]
[ext_resource type="PackedScene" uid="uid://c3dvk21fhqeoi" path="res://escenas/panel_menu.tscn" id="3_4gcmi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h17hg"]

[node name="PaginaSettings" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -513.0
offset_top = -287.5
offset_right = 513.0
offset_bottom = 287.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_eteud")
theme_override_styles/panel = SubResource("StyleBoxEmpty_h17hg")
script = ExtResource("1_14rop")

[node name="BordeIlustracion3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 528.5
offset_top = 47.5
offset_right = 873.5
offset_bottom = 535.5
texture = ExtResource("1_ogg57")
expand_mode = 1

[node name="IlustracionInicio" type="TextureRect" parent="BordeIlustracion3"]
layout_mode = 0
offset_left = 29.0
offset_top = 24.0
offset_right = 318.0
offset_bottom = 461.0
texture = ExtResource("2_rk8on")
expand_mode = 1

[node name="Settings" parent="." instance=ExtResource("3_4gcmi")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -906.0
offset_top = -245.0
offset_right = -500.0
offset_bottom = 281.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.946448, 0.946448)

[node name="Titulo" parent="Settings" index="0"]
text = "AJUSTES"

[node name="VolumenMaster" type="HSlider" parent="Settings"]
layout_mode = 0
offset_left = 74.0
offset_top = 148.0
offset_right = 330.0
offset_bottom = 164.0

[node name="Label" type="Label" parent="Settings/VolumenMaster"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = -32.0
offset_right = 64.0
offset_bottom = -9.0
grow_horizontal = 2
text = "Master"
horizontal_alignment = 1

[node name="MuteMaster" type="CheckButton" parent="Settings/VolumenMaster"]
layout_mode = 0
offset_left = 216.0
offset_top = 24.0
offset_right = 260.0
offset_bottom = 48.0

[node name="Label2" type="Label" parent="Settings/VolumenMaster"]
layout_mode = 0
offset_left = 168.0
offset_top = 16.6039
offset_right = 213.0
offset_bottom = 46.6039
text = "Mute"

[node name="VolumenMusica" type="HSlider" parent="Settings"]
layout_mode = 0
offset_left = 74.0
offset_top = 260.0
offset_right = 330.0
offset_bottom = 276.0

[node name="Label" type="Label" parent="Settings/VolumenMusica"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = -32.0
offset_right = 64.0
offset_bottom = -9.0
grow_horizontal = 2
text = "Volumen MÃºsica"
horizontal_alignment = 1

[node name="MuteMusica" type="CheckButton" parent="Settings/VolumenMusica"]
layout_mode = 0
offset_left = 216.0
offset_top = 24.0
offset_right = 260.0
offset_bottom = 48.0

[node name="Label2" type="Label" parent="Settings/VolumenMusica"]
layout_mode = 0
offset_left = 168.0
offset_top = 16.6039
offset_right = 213.0
offset_bottom = 46.6039
text = "Mute"

[node name="VolumenSFX" type="HSlider" parent="Settings"]
layout_mode = 0
offset_left = 74.0
offset_top = 372.0
offset_right = 330.0
offset_bottom = 388.0

[node name="Label" type="Label" parent="Settings/VolumenSFX"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = -32.0
offset_right = 64.0
offset_bottom = -9.0
grow_horizontal = 2
text = "Volumen SFX
"
horizontal_alignment = 1

[node name="MuteSFX" type="CheckButton" parent="Settings/VolumenSFX"]
layout_mode = 0
offset_left = 216.0
offset_top = 24.0
offset_right = 260.0
offset_bottom = 48.0

[node name="Label2" type="Label" parent="Settings/VolumenSFX"]
layout_mode = 0
offset_left = 168.0
offset_top = 17.6605
offset_right = 213.0
offset_bottom = 47.6605
text = "Mute"

[connection signal="drag_ended" from="Settings/VolumenMaster" to="." method="_on_volumen_master_drag_ended"]
[connection signal="drag_started" from="Settings/VolumenMaster" to="." method="_on_volumen_master_drag_started"]
[connection signal="value_changed" from="Settings/VolumenMaster" to="." method="_on_volumen_master_value_changed"]
[connection signal="pressed" from="Settings/VolumenMaster/MuteMaster" to="." method="_on_mute_master_pressed"]
[connection signal="drag_ended" from="Settings/VolumenMusica" to="." method="_on_volumen_musica_drag_ended"]
[connection signal="drag_started" from="Settings/VolumenMusica" to="." method="_on_volumen_musica_drag_started"]
[connection signal="value_changed" from="Settings/VolumenMusica" to="." method="_on_volumen_musica_value_changed"]
[connection signal="pressed" from="Settings/VolumenMusica/MuteMusica" to="." method="_on_mute_musica_pressed"]
[connection signal="drag_ended" from="Settings/VolumenSFX" to="." method="_on_volumen_sfx_drag_ended"]
[connection signal="drag_started" from="Settings/VolumenSFX" to="." method="_on_volumen_sfx_drag_started"]
[connection signal="value_changed" from="Settings/VolumenSFX" to="." method="_on_volumen_sfx_value_changed"]
[connection signal="pressed" from="Settings/VolumenSFX/MuteSFX" to="." method="_on_mute_sfx_pressed"]

[editable path="Settings"]
